tests/NormalTests/paczka1/fuzzy1/76572077.err
Error in line 5: 0bTAc6t A800 118,4
Error in line 10: 94LRYIRhm S913 75,3
Error in line 16: 94LRYIRhm A800 74,5
Error in line 21: F3sIWE6Z A800 66,8
Error in line 18: eTvCS A461 87,1
Error in line 35: F3sIWE6Z A461 97,3
